--- a/workshop/6/start/css/components/add-button.css
+++ b/workshop/6/start/css/components/add-button.css
@@ -1,12 +1,15 @@
 .add-button {
     background-image: url('../../img/components/add-button.png');
+    background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 5rem 5rem;
     border: 0;
+    border-radius: 5rem;
     bottom: 2rem;
-    height: 5rem;
+    box-shadow: 0px 3px 26px -4px rgba(0,0,0,0.75);
+    height: 4rem;
     position: fixed;
     text-indent: -99999px;
     right: 2rem;
-    width: 5rem;
+    width: 4rem;
 }
