--- a/workshop/6/start/css/components/news-form.css
+++ b/workshop/6/start/css/components/news-form.css
@@ -1,10 +1,20 @@
 #news-form {
+    animation: inDown;
+    animation-duration: .2s;
     background: white;
-    box-shadow: 0px 3px 26px -4px rgba(0,0,0,0.75);
+    box-shadow: 0px 3px 26px -4px rgba(0, 0, 0, 0.75);
     left: 50%;
     padding: 2rem;
+    width: 40rem;
+    margin: 0 auto;
+}
+
+#news-form-container {
+    animation: fadeIn;
+    animation-duration: .2s;
+    background-color: rgba(255, 255, 255, .2);
+    height: 100%;
     position: absolute;
     top: 0;
-    transform: translateX(-50%);
-    width: 40rem;
+    width: 100%;
 }
