--- a/workshop/6/start/css/components/news-form.css
+++ b/workshop/6/start/css/components/news-form.css
@@ -3,6 +3,7 @@
     animation-duration: .2s;
     background: white;
     box-shadow: 0px 3px 26px -4px rgba(0, 0, 0, 0.75);
+    height: 20rem;
     left: 50%;
     padding: 2rem;
     width: 40rem;
