--- a/workshop/4/start/css/components/network-indicator.css
+++ b/workshop/4/start/css/components/network-indicator.css
@@ -4,7 +4,8 @@
     display: none;
     text-align: center;
     margin: 0;
-    font-size: .75rem;
+    font-size: 1.2rem;
+    padding: .2rem;
 }
 
 #network-indicator {
